simple line chart based on v4 of d3

--- a/dev/css/style.css
+++ b/dev/css/style.css
@@ -4664,3 +4664,12 @@ a.text-dark:focus, a.text-dark:hover {
 
 .invisible {
   visibility: hidden !important; }
+
+.line {
+  fill: none;
+  stroke: #ffab00;
+  stroke-width: 3; }
+
+.dot {
+  fill: #ffab00;
+  stroke: white; }
