--- a/src/view/index.pug
+++ b/src/view/index.pug
@@ -3,4 +3,6 @@ extend layouts/main
 block content
   .container
     .row
-      .col-12#chart
+      .col-12#chart.chart
+        
+  include ./gradients/gradient.html
